# python-open-ai-demo

./: .gitignore  DOCKERFILE  README.md  pyproject.toml  requirements.txt
copilot/environments/test/: manifest.yml
copilot/internet-example/: manifest.yml
openai_api_demo/: config-example.py  main.py
